--- a/src/App/app.module.scss
+++ b/src/App/app.module.scss
@@ -1,8 +1,9 @@
 .wrapper {
   background-color: #212121;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
+  flex-flow: row wrap;
   align-items: center;
   justify-content: center;
 }
